--- a/projects/Mario's Pest Control/style.css
+++ b/projects/Mario's Pest Control/style.css
@@ -1,3 +1,11 @@
+h1 {
+    font-family: '8BITWONDERNominal';
+    font-weight: normal;
+    font-style: normal;
+    color: mintcream;
+    text-shadow: 7px 9px forestgreen;
+}
+
 img {
     display: inline-block;
 }
@@ -19,13 +27,13 @@ body {
     margin: 0px 20px;
 }
 
-    .imgwrapper {
+.imgwrapper {
     min-height: 200px;
     margin-bottom: 50px;
-    background: url(https://images-production.global.ssl.fastly.net/uploads/posts/image/122870/successful-video-games-history-fhm.png);
-    background-size: 100%;
+    --background-image: url(https://images-production.global.ssl.fastly.net/uploads/posts/image/122870/successful-video-games-history-fhm.png);
+    background-size: 100% auto;
     background-repeat: no-repeat;
-    background-position-y: 75%;
+    background-position: center;
 }
 
 .imgwrapper h1 {
